- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    Qt Creator 4.1.0
- 
    Xcode 8 GM
- 
        2b0daf42ce2c6ccb40d66c29eea18be7cf4d769c
When creating a new project in creator and try to run it, it builds just fine, but the iPhone simulator never starts and I get the message "Starting remote process. Run ended.". If I test on device instead, it works without problems.
- is duplicated by
- 
                    QTCREATORBUG-17259 Qt on iOS Simulator: Run ended with error. -           
- Closed
 
-         
- 
                    QTCREATORBUG-18950 iOS: cannot launch app in simulator -         
- Closed
 
-         
- is required for
- 
                    QTCREATORBUG-16913 iOS support: Fix some broken Qt/iOS/Xcode version combinations -         
- Closed
 
-         
| For Gerrit Dashboard: QTCREATORBUG-16942 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 172883,5 | iOS: Removed ios_sim tool source. simctl is used for app deployment on iOS Simulator | 4.1 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |