iOS: Removed ios_sim tool source. simctl is used for app deployment on iOS Simulator

Task-number: QTCREATORBUG-16942
Change-Id: Ie50bdfdbf9005e383a2753a3c6081a563a175f61
Reviewed-by: Eike Ziller <eike.ziller@qt.io>