src/tools/3rdparty/iossim_1_8_2/version.h
@@ -1,1 +1,0 @@
-#define IOS_SIM_VERSION "1.8.2m"
